@@ -83,6 +83,7 @@
 #define MNI_GATEWAYS_KEEP_CONNECTION    "gatewaysKeepConnection"
 #define MNI_GATEWAYS_CHANGE             "gatewaysChange"
 #define MNI_GATEWAYS_RESOLVE            "gatewaysResolve"
+#define MNI_GATEWAYS_REMOVE             "gatewaysRemove"
 
 //JabberSearch
 #define MNI_JSEARCH                     "jsearch"
