@@ -11,6 +11,7 @@ LEGEND
   [!] Added new plugin for notifications about birthdays
   [+] Added ability to show a minimized window with the message when notification received
   [+] Added date separators in chat windows and conferences
+  [+] Added ability to remove transpots with their contacts from roster
   [*] Notice of user activity in the chat duplicated on the chat tab
   [*] Added new types of notifications and changed the way of their settings
   [*] Added context menu for tabs in tabwindow
